--- a/ModuleManager.DomainDal.Tests/App.config
+++ b/ModuleManager.DomainDal.Tests/App.config
@@ -18,10 +18,7 @@
     <!-- Localhost -->
     <!-- Development & Test connnectionstrings can be found on azure / application settings / connectionstrings
         These connectionstrings will be overwritten automatically -->
-    <add name="DomainEntities" 
-         
-         connectionString="metadata=res://*/ModuleManagerDB.csdl|res://*/ModuleManagerDB.ssdl|res://*/ModuleManagerDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\v11.0;initial catalog=ModuleManager.Domain;Integrated Security=true;application name=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
-    
-   
+    <add name="DomainEntities" connectionString="metadata=res://*/ModuleManagerEntities.csdl|res://*/ModuleManagerEntities.ssdl|res://*/ModuleManagerEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\v11.0;initial catalog=ModuleManager.Domain;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+
   </connectionStrings>
 </configuration>
