--- a/ModuleManager.Domain/ModuleManager.Domain.csproj
+++ b/ModuleManager.Domain/ModuleManager.Domain.csproj
@@ -60,7 +60,7 @@
     <Compile Include="Competentie.cs">
       <DependentUpon>ModuleManagerEntities.tt</DependentUpon>
     </Compile>
-    <Compile Include="C__RefactorLog.cs">
+    <Compile Include="CompetentieOnderdeel.cs">
       <DependentUpon>ModuleManagerEntities.tt</DependentUpon>
     </Compile>
     <Compile Include="Docent.cs">
@@ -79,6 +79,9 @@
     <Compile Include="Interfaces\ISysteemRolRepository.cs" />
     <Compile Include="Interfaces\IUnitOfWork.cs" />
     <Compile Include="Interfaces\IUserRepository.cs" />
+    <Compile Include="Kwaliteitskenmerk.cs">
+      <DependentUpon>ModuleManagerEntities.tt</DependentUpon>
+    </Compile>
     <Compile Include="Leerdoel.cs">
       <DependentUpon>ModuleManagerEntities.tt</DependentUpon>
     </Compile>
@@ -89,9 +92,6 @@
       <DependentUpon>ModuleManagerEntities.tt</DependentUpon>
     </Compile>
     <Compile Include="Module.cs">
-      <DependentUpon>ModuleManagerEntities.tt</DependentUpon>
-    </Compile>
-    <Compile Include="ModuleCompetentie.cs">
       <DependentUpon>ModuleManagerEntities.tt</DependentUpon>
     </Compile>
     <Compile Include="ModuleManagerEntities.Context.cs">
@@ -110,9 +110,6 @@
       <DependentUpon>ModuleManagerEntities.edmx</DependentUpon>
     </Compile>
     <Compile Include="ModuleWerkvorm.cs">
-      <DependentUpon>ModuleManagerEntities.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Niveau.cs">
       <DependentUpon>ModuleManagerEntities.tt</DependentUpon>
     </Compile>
     <Compile Include="Onderdeel.cs">
