--- a/ModuleManager.Web/ModuleManager.Web.csproj
+++ b/ModuleManager.Web/ModuleManager.Web.csproj
@@ -23,7 +23,6 @@
     <RestorePackages>true</RestorePackages>
     <UseGlobalApplicationHostFile />
     <TargetFrameworkProfile />
-    <MvcBuildViews>true</MvcBuildViews>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -44,6 +43,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <MvcBuildViews>true</MvcBuildViews>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Antlr3.Runtime, Version=3.5.0.2, Culture=neutral, PublicKeyToken=eb42632606e9261f, processorArchitecture=MSIL">
@@ -329,7 +329,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ModuleController.cs" />
     <Compile Include="Controllers\PartialViewControllers\ModuleBlockController.cs" />
-    <Compile Include="Controllers\PartialViewControllers\CompetentieController.cs" />
+    <Compile Include="Controllers\CompetentiesController.cs" />
     <Compile Include="Controllers\PartialViewControllers\FaseController.cs" />
     <Compile Include="Controllers\PartialViewControllers\LeerlijnenController.cs" />
     <Compile Include="Controllers\PartialViewControllers\ModuleController.cs" />
@@ -353,8 +353,10 @@
     <Compile Include="ViewModels\CheckModulesViewModel.cs" />
     <Compile Include="ViewModels\AdminCurriculumViewModel.cs" />
     <Compile Include="ViewModels\AdminUserManagementViewModel.cs" />
+    <Compile Include="ViewModels\EntityViewModel\Competenties\CompetentieOnderdeelViewModel.cs" />
+    <Compile Include="ViewModels\EntityViewModel\Competenties\CompetentieViewModel.cs" />
+    <Compile Include="ViewModels\EntityViewModel\Competenties\KwaliteitskenmerkViewModel.cs" />
     <Compile Include="ViewModels\EntityViewModel\BeoordelingenViewModel.cs" />
-    <Compile Include="ViewModels\EntityViewModel\CompetentieViewModel.cs" />
     <Compile Include="ViewModels\EntityViewModel\DocentViewModel.cs" />
     <Compile Include="ViewModels\EntityViewModel\FaseTypeViewModel.cs" />
     <Compile Include="ViewModels\EntityViewModel\LeerdoelenViewModel.cs" />
@@ -432,10 +434,10 @@
     <Content Include="Views\Admin\Users\_Add.cshtml" />
     <Content Include="Views\Admin\Users\_Edit.cshtml" />
     <Content Include="Views\Admin\CheckModules\_Lock.cshtml" />
-    <Content Include="Views\Admin\Curriculum\Competentie\_Add.cshtml" />
-    <Content Include="Views\Admin\Curriculum\Competentie\_Edit.cshtml" />
-    <Content Include="Views\Admin\Curriculum\Competentie\_Details.cshtml" />
-    <Content Include="Views\Admin\Curriculum\Competentie\_Delete.cshtml" />
+    <Content Include="Views\Competenties\_Add.cshtml" />
+    <Content Include="Views\Competenties\_Edit.cshtml" />
+    <Content Include="Views\Competenties\_Details.cshtml" />
+    <Content Include="Views\Competenties\_Delete.cshtml" />
     <Content Include="Views\Admin\Curriculum\Fase\_Add.cshtml" />
     <Content Include="Views\Admin\Curriculum\Fase\_Edit.cshtml" />
     <Content Include="Views\Admin\Curriculum\Fase\_Delete.cshtml" />
@@ -452,6 +454,7 @@
     <Content Include="Views\Admin\Curriculum\Docent\_Add.cshtml" />
     <Content Include="Views\Admin\Curriculum\Docent\_Delete.cshtml" />
     <Content Include="Views\Admin\Curriculum\Docent\_Edit.cshtml" />
+    <Content Include="Views\Competenties\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
