--- a/ModuleManager.BusinessLogic/ModuleManager.BusinessLogic.csproj
+++ b/ModuleManager.BusinessLogic/ModuleManager.BusinessLogic.csproj
@@ -35,6 +35,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AutoMapper, Version=5.2.0.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
+      <HintPath>..\packages\AutoMapper.5.2.0\lib\net45\AutoMapper.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="MigraDoc.DocumentObjectModel">
       <HintPath>..\packages\PDFsharp-MigraDoc.1.50.3638-beta\lib\net20\MigraDoc.DocumentObjectModel.dll</HintPath>
     </Reference>
