--- a/.gitignore
+++ b/.gitignore
@@ -142,6 +142,8 @@ publish/
 # If using the old MSBuild-Integrated Package Restore, uncomment this:
 #!**/packages/repositories.config
 
+.nuget/NuGet.exe
+
 # Windows Azure Build Output
 csx/
 *.build.csdef
